# ACID-Double-Linked-List

./: CMakeLists.txt  ConsistentList.hpp  ConstIteratorTests.cpp  Double Linked List.sln  Iterator.hpp  IteratorTests.cpp  LICENSE  MultiThreadTests.cpp  Node.hpp  SentinelNode.hpp  Tests.cpp
Debug/: Double Linked List.ilk
Double Linked List/: ConsistentList.h  ConsistentListException.h  ConstIterator.h  Double Linked List.vcxproj  Double Linked List.vcxproj.filters  Double_Linked_List.h  Iterator.h  Node.h  SentinelingNode.h  Source.cpp  TrueNode.h
Double Linked List/Debug/: Double Linked List.exe.recipe  source.obj.enc  vc142.idb
Double Linked List/Debug/Double L.4850f6d4.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Double Linked List.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Test/: Test.vcxproj  test.cpp
Test/Debug/Test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  CopyLocal.read.1u.tlog  CopyLocal.write.1u.tlog
src/: ConsistentList.hpp  ConsistentListException.hpp  ConstIterator.hpp  GarbageCollector.hpp  Iterator.hpp  Node.hpp  SentinelNode.hpp  SpinlockBasedRWLock.hpp  TrueNode.hpp
